# Nano-8

./: CMakeLists.txt  floppy.img
assembler/: CMakeLists.txt
assembler/include/: assembler.h  flags.h  instructionDef.c  instructionDef.h  objectFileWriter.h  segments.h  symbolTable.h  tokeniser.h  utils.h
assembler/src/: assembler.c  instructionDef.c  main.c  objectFileWriter.c  segments.c  symbolTable.c  tokeniser.c  utils.c
emulator/: CMakeLists.txt
emulator/include/: cpu.h  emulatorTests.h  flags.h  floppyDiskController.h  memory.h  pmio.h  videoCard.h
emulator/src/: cpu.c  emulatorTests.c  floppyDiskController.c  main.c  memory.c  pmio.c  videoCard.c
linker/: CMakeLists.txt
linker/include/: flags.h  linker.h  linkerFileParser.h  objectFileReader.h
linker/src/: linker.c  linkerFileParser.c  main.c  objectFileReader.c
testprogram/: bios.asm  bootloader.asm
